added sections to index page for quiz elements. added potential bg image.

--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
     <div class="container">
         
         <div class="quizarea">
-            <h1>QUIZ TIME YAY</h1>
-            <h1>QUIZ TIME YAY</h1>
-            <h1>QUIZ TIME YAY</h1>
-            <h1>QUIZ TIME YAY</h1>
-            <h1>QUIZ TIME YAY</h1>
+            <h2>WHAT IS THE ANSWER TO THE QUESTION???</h2>
+            <button>ANSWER 1</button>
+            <button>ANSWER 2</button>
+            <button>ANSWER 3</button>
+            <button>ANSWER 4</button>
         </div>
+    </div>
+    <div class="right-wrong">
+        <h2>RIGHT! or WRONG!</h2>
     </div>
 
     <script src="assets/js/script.js"></script>
