--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header>
         <div class="highscore">
-            <h2>HIGH SCORE AREA</h2>
+            <h2><a href="highscore.html">VIEW HIGH SCORES</a></h2>
         </div>
         <div class="timer">
             <h2>TIMER</h2>
@@ -20,14 +20,31 @@
 <body>
     <div class="container">
         
-        <div class="quizarea">
-            <h2>WHAT IS THE ANSWER TO THE QUESTION???</h2>
-            <button>ANSWER 1</button>
-            <button>ANSWER 2</button>
-            <button>ANSWER 3</button>
-            <button>ANSWER 4</button>
+        <!-- The start screen when the quiz index is opened -->
+        <div class="quizstart">
+            <img src="assets/images/gonzo.png" alt="Gonzo" width="300px" height="300px"> 
+            <h1>HOW WELL DO YOU KNOW GONZO?!</h1>
+            <p>Do you think you know my cool dog? Let us find out...</p>
+            <button>START</button>
+        </div>
+
+        <!-- This is invisible to begin. The random questions appear here -->
+        <div class="questions" class="hide">
+
+            <h2 id="question-title"></h2>
+            <div id="potential-answers" class="potential-choices"></div>
+
+        </div>
+
+        <div id="score-screen" class="hide">
+            <h2>FINISHED.</h2>
+            <p>Your final score is: <span id="final-score"></span></p>
+
+            <p>Enter initials for the high score list: <input type="text" id="initials" max="3"/>
+                <button id="submit">Submit Score</button></p>
         </div>
     </div>
+
     <div class="right-wrong">
         <h2>RIGHT! or WRONG!</h2>
     </div>
