--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h2><a href="highscore.html">VIEW HIGH SCORES</a></h2>
         </div>
         <div class="timer">
-            <h2>TIMER</h2>
+            <h2>TIME LEFT: <span id="time">0</span></h2>
         </div>
 </header>
 
@@ -23,16 +23,16 @@
         <!-- The start screen when the quiz index is opened -->
         <div class="quizstart">
             <img src="assets/images/gonzo.png" alt="Gonzo" width="300px" height="300px"> 
-            <h1>HOW WELL DO YOU KNOW GONZO?!</h1>
-            <p>Do you think you know my cool dog? Let us find out...</p>
-            <button>START</button>
+            <h1>HOW WELL DO YOU KNOW GONZO?</h1>
+            <p>Do you think you know my dog? Let us find out.</p>
+            <button id="start">START</button>
         </div>
 
         <!-- This is invisible to begin. The random questions appear here -->
         <div class="questions" class="hide">
 
-            <h2 id="question-title"></h2>
-            <div id="potential-answers" class="potential-choices"></div>
+            <h2 id="question"></h2>
+            <div id="answers" class="potential-choices"></div>
 
         </div>
 
