--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
     <div class="container">
         
         <!-- The start screen when the quiz index is opened -->
-        <div class="quizstart">
+        <div id= "quizstart" class="quizstart">
             <img src="assets/images/gonzo.png" alt="Gonzo" width="300px" height="300px"> 
             <h1>HOW WELL DO YOU KNOW GONZO?</h1>
             <p>Do you think you know my dog? Let us find out.</p>
-            <button id="start">START</button>
+            <button id="start" onclick="beginQuiz()">START</button>
         </div>
 
         <!-- This is invisible to begin. The random questions appear here -->
         <div class="questions" class="hide">
 
             <h2 id="question"></h2>
-            <div id="answers" class="potential-choices"></div>
+            <div id="choices" class="potential-choices"></div>
 
         </div>
 
