--- a/index.html
+++ b/index.html
@@ -21,19 +21,20 @@
     <div class="container">
         
         <!-- The start screen when the quiz index is opened -->
-        <div id= "quizstart" class="quizstart">
+        <div id= "startscreen" class="quizstart">
             <img src="assets/images/gonzo.png" alt="Gonzo" width="300px" height="300px"> 
             <h1>HOW WELL DO YOU KNOW GONZO?</h1>
             <p>Do you think you know my dog? Let us find out.</p>
-            <button id="start" onclick="beginQuiz()">START</button>
+            <button id="start">START</button>
         </div>
 
         <!-- This is invisible to begin. The random questions appear here -->
-        <div class="questions" class="hide">
-
-            <h2 id="question"></h2>
-            <div id="choices" class="potential-choices"></div>
-
+        <div class="quizarea" class="hide">
+                <h2 id="question"></h2>
+                <button>ANSWER 1</button>
+                <button>ANSWER 2</button>
+                <button>ANSWER 3</button>
+                <button>ANSWER 4</button>
         </div>
 
         <div id="score-screen" class="hide">
