--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
         
         <!-- The start screen when the quiz index is opened -->
-        <div id= "startscreen" class="quizstart">
+        <div id="startscreen" class="quizstart">
             <img src="assets/images/gonzo.png" alt="Gonzo" width="300px" height="300px"> 
             <h1>HOW WELL DO YOU KNOW GONZO?</h1>
             <p>Do you think you know my dog? Let us find out.</p>
@@ -29,7 +29,7 @@
         </div>
 
         <!-- This is invisible to begin. The random questions appear here -->
-        <div class="quizarea" class="hide">
+        <div id="quizarea" class="hide">
                 <h2 id="question"></h2>
                 <button>ANSWER 1</button>
                 <button>ANSWER 2</button>
