--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
 
         <!-- This is invisible to begin. The random questions appear here -->
         <div id="quizarea" class="hide">
-                <h2 id="question"></h2>
-                <button>ANSWER 1</button>
-                <button>ANSWER 2</button>
-                <button>ANSWER 3</button>
-                <button>ANSWER 4</button>
+            <h2 id="question"></h2>
+                <div id="answers">
+                    <button id="answer-button">ANSWER 1</button>
+                    <button id="answer-button">ANSWER 1</button>
+                    <button id="answer-button">ANSWER 1</button>
+                    <button id="answer-button">ANSWER 1</button>
+                </div>
         </div>
 
         <div id="score-screen" class="hide">
