--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h2><a href="highscore.html">VIEW HIGH SCORES</a></h2>
         </div>
         <div class="timer">
-            <h2>TIME LEFT: <span id="time">0</span></h2>
+            <h2>TIME LEFT: <span id="timeleft"></span></h2>
         </div>
 </header>
 
@@ -32,10 +32,10 @@
         <div id="quizarea" class="hide">
             <h2 id="question"></h2>
                 <div id="answers">
+                    <!-- <button id="answer-button">ANSWER 1</button>
                     <button id="answer-button">ANSWER 1</button>
                     <button id="answer-button">ANSWER 1</button>
-                    <button id="answer-button">ANSWER 1</button>
-                    <button id="answer-button">ANSWER 1</button>
+                    <button id="answer-button">ANSWER 1</button> -->
                 </div>
         </div>
 
