added to functions in js. added back buttons in html

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <div id="quizarea" class="hide">
             <h2 id="question"></h2>
                 <div id="answers">
-                    <!-- <button id="answer-button">ANSWER 1</button>
                     <button id="answer-button">ANSWER 1</button>
-                    <button id="answer-button">ANSWER 1</button>
-                    <button id="answer-button">ANSWER 1</button> -->
+                    <button id="answer-button">ANSWER 2</button>
+                    <button id="answer-button">ANSWER 3</button>
+                    <button id="answer-button">ANSWER 4</button>
                 </div>
         </div>
 
@@ -49,7 +49,7 @@
     </div>
 
     <div class="right-wrong">
-        <h2>RIGHT! or WRONG!</h2>
+        <h2 id="yes-no">RIGHT! or WRONG!</h2>
     </div>
 
     <script src="assets/js/script.js"></script>
