fixed style issues, added next question button to quiz area

--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
         </div>
 
         <!-- This is invisible to begin. The random questions appear here -->
-        <div id="quizarea" class="hide">
+        <div id="quizarea" class=" quizstart hide">
             <h2 id="question"></h2>
                 <div id="answers">
-                    <button id="answer-button">ANSWER 1</button>
-                    <button id="answer-button">ANSWER 2</button>
-                    <button id="answer-button">ANSWER 3</button>
-                    <button id="answer-button">ANSWER 4</button>
+                    <button id="answer-button1">ANSWER 1</button>
+                    <button id="answer-button2">ANSWER 2</button>
+                    <button id="answer-button3">ANSWER 3</button>
+                    <button id="answer-button4">ANSWER 4</button>
                 </div>
+            <button id="next-question">NEXT</button>    
         </div>
 
         <div id="score-screen" class="hide">
