--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
             <h2>FINISHED.</h2>
             <p>Your final score is: <span id="final-score"></span></p>
 
-            <p>Enter initials for the high score list: <input type="text" id="initials" max="3"/>
-                <button id="submit">Submit Score</button></p>
+            <p>Enter initials for the high score list: <input type="text" id="initials" max="3">
+                <button id="submit">Submit Score</button>
+                <button id="reset">Start Over</button></p>
         </div>
 
         <div id="high-scores" class="hide">
