added text to high score screen

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
         <div id="high-scores" class="hide">
             <h2>HIGH SCORES</h2>
+            <p>COMING SOON. HOPEFULLY.</p>
             <ul>
                 <ol>1</ol>
                 <ol>2</ol>
