fixed start over button so it actually works

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <p>Enter initials for the high score list: <input type="text" id="initials" max="3">
                 <button id="submit">Submit Score</button>
-                <button id="reset">Start Over</button></p>
+                <a href="index.html"><button id="reset">Start Over</button></p></a>
         </div>
 
         <div id="high-scores" class="hide">
