fixed star over button on end game screen

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <ol>4</ol>
                 <ol>5</ol>
             </ul>
-            <button id="show-start-screen">Go Back</button>
+            <a href="index.html"><button id="show-start-screen">Go Back</button></a>
         </div>
     </div>
 
