high score functions now

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img src="assets/images/gonzo.png" alt="Gonzo" width="300px" height="300px"> 
             <h1>HOW WELL DO YOU KNOW GONZO?</h1>
             <p>Do you think you know my dog? Let us find out.</p>
-            <button id="start">START</button>
+            <button id="start-button">START</button>
         </div>
 
         <!-- This is invisible to begin. The random questions appear here -->
@@ -50,14 +50,8 @@
 
         <div id="high-scores" class="hide">
             <h2>HIGH SCORES</h2>
-            <p>COMING SOON. HOPEFULLY.</p>
-            <ul>
-                <ol>1</ol>
-                <ol>2</ol>
-                <ol>3</ol>
-                <ol>4</ol>
-                <ol>5</ol>
-            </ul>
+            <ol id="high-score-list">
+            </ol>
             <a href="index.html"><button id="show-start-screen">Go Back</button></a>
         </div>
     </div>
