--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img src="assets/images/gonzo.png" alt="Gonzo" width="300px" height="300px"> 
             <h1>HOW WELL DO YOU KNOW GONZO?</h1>
             <p>Do you think you know my dog? Let us find out.</p>
-            <button id="start-button">START</button>
+            <button class="custom-button" id="start-button">START</button>
         </div>
 
         <!-- This is invisible to begin. The random questions appear here -->
