added sounds and formatting changes

--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
                 <a href="index.html"><button id="reset">Start Over</button></p></a>
         </div>
 
-        <div id="high-scores" class="hide">
+        <div class="high-score-custom hide" id="high-scores">
             <h2>HIGH SCORES</h2>
             <ol id="high-score-list">
             </ol>
-            <a href="index.html"><button id="show-start-screen">Go Back</button></a>
+            <a href="index.html"><button class="custom-button" id="show-start-screen">Go Back</button></a>
         </div>
     </div>
 
     <div class="right-wrong">
-        <h2 id="yes-no">RIGHT! or WRONG!</h2>
+        <h2 id="yes-no"></h2>
     </div>
 
     <script src="assets/js/script.js"></script>
