--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <div id="quizarea" class="quizstart hide">
             <h2 id="question"></h2>
                 <div id="answers">
-                    <button id="answer-button1">ANSWER 1</button>
-                    <button id="answer-button2">ANSWER 2</button>
-                    <button id="answer-button3">ANSWER 3</button>
-                    <button id="answer-button4">ANSWER 4</button>
+                    <button class="answer-buttons" id="answer-button1">ANSWER 1</button>
+                    <button class="answer-buttons" id="answer-button2">ANSWER 2</button>
+                    <button class="answer-buttons" id="answer-button3">ANSWER 3</button>
+                    <button class="answer-buttons" id="answer-button4">ANSWER 4</button>
                 </div>
         </div>
 
@@ -45,7 +45,7 @@
             <p>Your final score is: <span id="final-score"></span></p>
 
             <p>Enter initials for the high score list: <input type="text" id="initials" max="3">
-                <button class="custom-button" id="submit">Submit Score</button>
+                <button class="custom-button" id="submit">Submit</button>
                 <a href="index.html"><button class="custom-button" id="reset">Start Over</button></p></a>
         </div>
 
